Удаление номера телефона
