# BusinessCalendar/swagger.json
@@ -2,7 +2,7 @@
   "openapi": "3.0.1",
   "info": {
     "title": "Business Calendar API",
-    "version": "0.4.0"
+    "version": "0.5.0"
   },
   "paths": {
     "/Event/targetdate={targetDate}&offset={offset}": {
@@ -640,10 +640,6 @@
             "nullable": true
           },
           "email": {
-            "type": "string",
-            "nullable": true
-          },
-          "phoneNumber": {
             "type": "string",
             "nullable": true
           },
