# Model/User/UserDTO.cs
@@ -8,8 +8,6 @@
 
         public string? Email { get; set; }
 
-        public string? PhoneNumber { get; set; }
-
         public string? Password { get; set;}
     }
 }
